@@ -7,6 +7,7 @@ gnome_keyboard_properties_SOURCES = gnome-keyboard-properties.c \
                                     gnome-keyboard-properties-xkb.c \
                                     gnome-keyboard-properties-xkbmc.c \
                                     gnome-keyboard-properties-xkblt.c \
+                                    gnome-keyboard-properties-xkbltadd.c \
                                     gnome-keyboard-properties-xkbot.c \
                                     gnome-keyboard-properties-xkbpv.c \
                                     gnome-keyboard-properties-xkb.h
